# legacy-waitlist

./: .gitignore  .gitmodules  .markdownlint.json  docker-compose.yaml  readme.md
backend/: .gitignore  Cargo.toml  Dockerfile  Gemfile  config.example.toml
backend/app/controllers/: announcements_controller.rb  application_controller.rb  auth_controller.rb  badges_controller.rb  bans_controller.rb  categories_controller.rb  commanders_controller.rb  fit_check_controller.rb  fittings_controller.rb  fleet_controller.rb  implants_controller.rb  modules_controller.rb  notes_controller.rb  pilots_controller.rb  reports_controller.rb  search_controller.rb  skills_controller.rb  sse_controller.rb  statistics_controller.rb  waitlist_controller.rb  window_controller.rb
backend/app/data/: categories_data.rb  fits_data.rb  fleet_data.rb  implant_data.rb  skills_data.rb  tags_data.rb  variations_data.rb
backend/app/errors/: access_denied_error.rb
backend/app/jobs/: fleet_updater_job.rb  sde_update_job.rb  skill_updater_job.rb
backend/app/models/: access_token.rb  admin.rb  alliance.rb  alt_character.rb  announcement.rb  application_record.rb  authenticated_account.rb  badge.rb  badge_assignment.rb  ban.rb  character.rb  character_note.rb  corporation.rb  dgm_type_attribute.rb  dgm_type_effect.rb  fit_history.rb  fitting.rb  fleet.rb  fleet_activity.rb  fleet_squad.rb  implant_set.rb  inv_group.rb  inv_meta_type.rb  inv_type.rb  map_solar_system.rb  refresh_token.rb  role_mapping.rb  skill_current.rb  skill_history.rb  waitlist_entry.rb  waitlist_entry_fit.rb  wiki_user.rb
backend/app/services/: affiliation_service.rb  auth_service.rb  ban_service.rb  esi_client_service.rb  fleet_service.rb  implant_service.rb  inv_types_service.rb  notify.rb
backend/config/: application.rb  credentials.yml.enc  database.yml  puma.rb  routes.rb
backend/config/data/: categories.yaml  fitnotes.yaml  modules.yaml  skillplan.yaml  skills.yaml
backend/config/environments/: development.rb  production.rb  test.rb
backend/data/: categories.yaml  fitnotes.yaml  skillplan.yaml  skills.yaml
backend/db/: schema.rb
backend/sql/: migration_mysql_0009.sql  migration_postgres_0009.sql  mysql.sql  postgres.sql
backend/src/: main.rs
(+202 files in other folders)
