[package]
name = "tdf_wl"
version = "0.1.0"
edition = "2018"

[workspace]
members = [
    "eve-data-core",
    "eve-data-macros",
]

[dependencies]
eve_data_macros = { path = "./eve-data-macros" }
eve_data_core = { path = "./eve-data-core" }

sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono"] }
rocket = { version = "0.5.0", features = ["json"] }
lazy_static = "1"
chrono = "0.4"
reqwest = { version = "*", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "*", features = ["time"] }

serde = "1.0.195"
serde_json = "*"
rmp-serde = "1.1"
yaml-merge-keys = { version = "*", features = ["serde_yaml"] }
serde_yaml = "*"
toml = "*"
branca = "0.10"
hex = "0.4"
regex = "1.10.2"
rand = "0.8.5"
thiserror = "*"
bcrypt = "*"
zxcvbn = "2.2.2"
itertools = "*"
Inflector = "0.11.4"
bigdecimal = { version = "0.3", features = ["serde"] }
dotenv = "*"
sentry = {version = "*", features = ["debug-images"] }

[features]
default = ["postgres"]
postgres = ["sqlx/postgres", "sqlx/bigdecimal"]
